# blaze

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.langfuse.yml  docker-compose.yml  package-lock.json  package.json  prisma.config.ts  run.sh
backend/: Dockerfile  blaze.py  requirements.txt  worker.py
backend/app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py  queue.py  types.py  utils.py
backend/app/core/: __init__.py  ids.py
backend/app/policy/: engine.py  (+2 more)
backend/scripts/: seed_langfuse_prompts.py
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: api.rs  auth.rs  config.rs  handoff.rs  lib.rs  main.rs
prisma/: schema.prisma
src/: middleware.ts  worker.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: action-card.tsx  blaze-logo.tsx  connection-card.tsx  landing-page.tsx  live-mic-capture.tsx  live-summary-block.tsx  nav.tsx  note-agent-panel.tsx  note-confirm-queue.tsx  note-delete-button.tsx  note-detail-view.tsx  note-source-badge.tsx  note-source-panel.tsx  note-transcript.tsx  notes-editor.tsx  notes-list-sidebar.tsx  notes-shell.tsx  providers.tsx  related-context-compact.tsx  session-view.tsx
src/hooks/: use-session-stream.ts
src/lib/: api.ts  auth.ts  caret-coords.ts  db.ts  env-setup.ts  note-navigation.ts  note-source-types.ts  queue.ts  session-stream-types.ts  session.ts  types.ts  utils.ts
src/mcp/: server.ts
(+127 files in other folders)
